#bugfix index page flickering on change
cosmetic changes

cosmetic changes

--- a/module-main/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/navBarMainContainerLogoAdvertisement.css
@@ -3,7 +3,8 @@ body {
     background-color: rgba(0, 0, 0, 1);
     margin: 0;
     padding: 0;
-    background-image: url('a32.jpg'); /* Zmień ścieżkę do obrazu zgodnie z rzeczywistą lokalizacją obrazu w projekcie */
+    background-image: url('a32.jpg');
+    /*background-image: url('kozak.png');*/
     /*background-size: cover; !* Skaluje obraz do rozmiarów elementu nadrzędnego *!*/
     /*background-size: 80% 80%;*/
     background-size: 1920px auto;
@@ -108,12 +109,12 @@ header {
 
 .container-main {
     width: 1500px;
-    margin: 150px auto 0;
+    margin: 200px auto 0;
     /*background-color: black;*/
     background-color: transparent;
     /*border: 2px solid darkgoldenrod;*/
     border: 0px solid darkgoldenrod;
-    padding: 20px;
+    padding: 0 20px 20px;
     display: flex;
     /*opacity: 0.9;*/
     border-radius: 30px;
@@ -126,14 +127,14 @@ header {
 
 .container-main .sub-container-big {
     box-shadow: 0 0 40px darkgoldenrod;
-    overflow: hidden; /* Ukrycie zawartości poza zaokrąglonymi krawędziami */
+    overflow: hidden;
     border-radius: 30px;
     width: 1200px;
     height: 1000px;
     margin: 40px;
     background-color: #181818;
     /*border: 1px solid darkgoldenrod;*/
-    animation: fade-in-main 1s ease-out;
+    /*animation: fade-in-main 1s ease-out;*/
     max-width: 100%;
 }
 
@@ -199,12 +200,15 @@ header {
 /*}*/
 
 @keyframes fade-in-main {
+
     from {
         /*background-color: rgba(0, 0, 0, 0);*/
+        /*overflow: hidden;*/
                 transform: translateY(200px);
     }
     to {
         /*background-color: rgba(0, 0, 0, 0.7);*/
+        /*overflow: hidden;*/
                 transform: translateY(0);
     }
 }
