--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/searchForm.css}" />
     <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/searchForm.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/last-uploaded.js}" ></script>
+    <script type="module" th:src="@{/js/last-uploaded.js}" ></script>
 </head>
 <style>
 
