design change implemented size scale slider with night mode on/off , cloning advertisement details from third party sites also started to implement , otomoto json object needs to be resolved for clone availability

--- a/module-main/motobudzetapi/src/main/resources/static/css/login.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/login.css
@@ -37,7 +37,7 @@
     background-color: #000000;
     border-radius: 30px;
     box-shadow: 0 0 40px darkgoldenrod;
-    border: 0px dashed darkgoldenrod;
+    border: 0 dashed darkgoldenrod;
     width: 500px;
     display: flex;
     flex-direction: column;
