--- a/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
@@ -6,7 +6,7 @@
     /*border-radius: 30px;*/
     border-radius: 0 30px 30px 30px;
     /*box-shadow: 0 0 40px green;*/
-    border: 0px dashed darkgoldenrod;
+    border: 0 dashed darkgoldenrod;
     width: 1500px;
     display: flex;
     flex-direction: column;
@@ -65,7 +65,7 @@ input[type=number] {
 
 .last-uploaded-title {
     font-size: 32px;
-    text-shadow: 1px 0px black, -1px 0px black, 0px 1px black, 0px -1px black;
+    text-shadow: 1px 0 black, -1px 0 black, 0 1px black, 0 -1px black;
 }
 
 @keyframes fade-in {
