--- a/module-main/motobudzetapi/src/main/resources/static/css/test.scss
+++ b/module-main/motobudzetapi/src/main/resources/static/css/test.scss
@@ -31,7 +31,7 @@ $shadow-color: #2c3e50;
   transform-style: preserve-3d;
   position: relative;
   transition: all 0.3s ease-out;
-  box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 
   img,
   .ph-shadow,
@@ -56,7 +56,7 @@ $shadow-color: #2c3e50;
     left: 5%;
     top: 5%;
     transition: all 0.4s ease-out;
-    box-shadow: 0px 10px 50px rgba($shadow-color, .9);
+    box-shadow: 0 10px 50px rgba($shadow-color, .9);
   }
 
   .ph-lighting {
@@ -65,6 +65,6 @@ $shadow-color: #2c3e50;
 }
 
 .dark-mode #container-main .ph-image {
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px !important;
+  box-shadow: rgb(38, 57, 77) 0 20px 30px -10px !important;
 }
 
