--- a/module-main/motobudzetapi/src/main/resources/static/css/advertisement.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/advertisement.css
@@ -5,11 +5,8 @@
     flex-basis: auto;
     height: auto;
     background-color: rgba(0,0,0, 1);
-    /*background-color: transparent;*/
-    margin: 0 20px;
-    margin-bottom: 15px;
+    margin: 0 20px 15px;
     padding: 10px;
-    display: grid;
     border-radius: 30px;
     cursor: default;
     animation: fade-in 1s ease-in-out forwards;
