--- a/module-main/motobudzetapi/src/main/resources/static/css/test.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/test.css
@@ -25,12 +25,9 @@ figure {
   transform-style: preserve-3d;
   position: relative;
   transition: all 0.3s ease-out;
-  box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 20px 30px -10px !important;
 }
-.ph-image img,
-.ph-image .ph-shadow,
-.ph-image .ph-content,
-.ph-image .ph-lighting {
+.ph-image img {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -42,21 +39,6 @@ figure {
   overflow: hidden;
   transition: all 0.4s ease-out;
   transform-style: preserve-3d;
-}
-.ph-image .ph-shadow {
-  height: 90%;
-  width: 90%;
-  left: 5%;
-  top: 5%;
-  transition: all 0.4s ease-out;
-  box-shadow: 0 10px 50px rgba(44, 62, 80, 0.9);
-}
-.ph-image .ph-lighting {
-  background-image: linear-gradient(135deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 33%);
-}
-
-.dark-mode #container-main .ph-image {
-  box-shadow: rgb(38, 57, 77) 0 20px 30px -10px !important;
 }
 
 /*# sourceMappingURL=test.css.map */
