--- a/module-main/motobudzetapi/src/main/resources/static/css/test.scss
+++ b/module-main/motobudzetapi/src/main/resources/static/css/test.scss
@@ -31,12 +31,10 @@ $shadow-color: #2c3e50;
   transform-style: preserve-3d;
   position: relative;
   transition: all 0.3s ease-out;
-  box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  //box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  box-shadow: rgba(255, 255, 255, 0.8) 0 20px 30px -10px !important;
 
-  img,
-  .ph-shadow,
-  .ph-content,
-  .ph-lighting {
+  img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -49,22 +47,39 @@ $shadow-color: #2c3e50;
     transition: all 0.4s ease-out;
     transform-style: preserve-3d;
   }
-
-  .ph-shadow {
-    height: 90%;
-    width: 90%;
-    left: 5%;
-    top: 5%;
-    transition: all 0.4s ease-out;
-    box-shadow: 0 10px 50px rgba($shadow-color, .9);
-  }
-
-  .ph-lighting {
-    background-image: linear-gradient(135deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 33%);
-  }
 }
 
-.dark-mode #container-main .ph-image {
-  box-shadow: rgb(38, 57, 77) 0 20px 30px -10px !important;
-}
-
+//.ph-image:after {
+//  /* Pseudo-element tworzący szary efekt 3D na bokach żetonu */
+//  content: '';
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//  height: 100%;
+//  background: gray;
+//  transform-origin: left;
+//  transform: rotateY(-90deg);
+//  transition: transform 0.25s ease-out;
+//  opacity: 0.5; /* Możesz dostosować przezroczystość boków */
+//  box-shadow: 5px 5px 20px rgba(0,0,0,0.5); /* Dodaj cień, aby uzyskać głębię */
+//  border-radius: 5px; /* Zaokrąglenie krawędzi, jeśli jest potrzebne */
+//  z-index: -1;
+//}
+//
+//.ph-image:before {
+//  content: '';
+//  position: absolute;
+//  top: 0;
+//  right: 0;
+//  width: 100%;
+//  height: 100%;
+//  background: gray;
+//  transform-origin: right;
+//  transform: rotateY(90deg);
+//  transition: transform 0.25s ease-out;
+//  opacity: 0.5; /* Dostosuj przezroczystość boków według potrzeb */
+//  box-shadow: -5px 5px 20px rgba(0,0,0,0.5); /* Dodaj cień po przeciwnej stronie, aby uzyskać efekt głębi */
+//  border-radius: 5px; /* Zaokrąglenie krawędzi, jeśli jest potrzebne */
+//  z-index: -1;
+//}
