--- a/module-main/motobudzetapi/src/main/resources/static/css/zoom.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/zoom.css
@@ -69,13 +69,49 @@
     filter: invert(1);
 }
 
-.abc {
-    box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0;
+/*.dark-mode #container-main .ph-image {*/
+/*    filter: invert(1);*/
+/*}*/
+
+.search-result-image {
+    /*box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0;*/
+    max-width: 100%;
+    box-sizing: border-box;
+    flex-shrink: 1;
 }
 
+.dark-mode #container-main .search-result-image {
+    box-shadow: rgb(255, 255, 255) 0 20px 30px -10px !important;
+}
+
+
+.abc {
+    box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0;
+    /*box-shadow: rgba(255, 255, 255, 0.8) 0 20px 30px -10px !important;*/
+    max-width: 100%;
+    box-sizing: border-box;
+    flex-shrink: 1;
+}
 .dark-mode #container-main .abc {
     box-shadow: rgb(38, 57, 77) 0 20px 30px -10px !important;
 }
+.dark-mode #container-main .ph-image {
+    box-shadow: rgb(255, 255, 255) 0 20px 30px -10px !important;
+}
+
+
+
+
+/*.searchResult {*/
+/*    box-shadow: rgba(184, 134, 11, 0.8) 6px 2px 16px 0, rgba(255, 255, 255, 0.8) -6px -2px 16px 0;*/
+/*    max-width: 100%;*/
+/*    box-sizing: border-box;*/
+/*    flex-shrink: 1;*/
+/*}*/
+
+/*.dark-mode #container-main .searchResult {*/
+/*    box-shadow: rgb(255, 255, 255) 0 20px 30px -10px;*/
+/*}*/
 
 
 /*.dark-mode #container-main .fade-effect-miniature::before,*/
