--- a/module-main/motobudzetapi/src/main/resources/templates/editForm.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/editForm.html
@@ -25,9 +25,11 @@
     <a href="/advertisement/new">Sprzedaj</a>
     <a href="/messages">Wiadomosci</a>
     <a href="/favourites">Ulubione</a>
-    <a href="/account"><span id="username" th:text="${username}"></span></a>
-    <a href="/logout" th:if="${logout != null}">
-      <span id="logout" th:text="${logout}"></span>
+    <a href="/advertisements">Ogloszenia</a>
+    <a href="/login" th:unless="${username != 'ZALOGUJ'}"><span th:text="${username}">ZALOGUJ</span></a>
+    <a href="/logout" th:if="${username != 'ZALOGUJ'}" id="userLogoutButton">
+      <span class="username-text" th:text="${username}" id="username"></span>
+      <span class="logout-text">WYLOGUJ</span>
     </a>
   </div>
 </header>
