--- a/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
+++ b/module-main/motobudzetapi/src/main/resources/static/css/searchForm.css
@@ -61,7 +61,8 @@ input[type=number] {
     flex-wrap: wrap;
     justify-content: center;
     box-sizing: border-box;
-    max-width: 100%
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .info-result-container {
