--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -47,6 +47,9 @@
 <div id="snowflakeContainer"></div>
 <div class="container-main" id="container-main"></div>
 <div id="zoom-controls">
+    <div class="nav-buttons">
+        <a href="/management" th:if="${ROLE == 'ROLE_ADMIN'}" class="nav-buttons">ADMIN</a>
+    </div>
     <div style="display: flex">
         <label style="font-size: 60px;align-items: center; justify-content: center;">🕵️</label>
         <div class="custom-toggle-switch">
