--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -43,6 +43,9 @@
     <div id="results2"></div>
 </div>
 <div id="zoom-controls">
+    <div class="nav-buttons">
+    <a href="/management" th:if="${ROLE == 'ROLE_ADMIN'}" class="nav-buttons">ADMIN</a>
+    </div>
     <div style="display: flex">
         <label style="font-size: 60px;align-items: center; justify-content: center;">🕵️</label>
         <div class="custom-toggle-switch">
