hidden management script on advertisement page implemented on frontend and backend , still need some refactor , advertisement form create/edit  failure / loading gif implemented  , user activation and first details fixed

--- a/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/zoom.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/test.css}" />
 
+    <script th:if="${ROLE == 'ROLE_ADMIN'}" type="text/javascript" th:src="@{/js/management.js}"></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
     <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
