--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta property="og:image" content="https://motobudzet.pl/api/resources/logo"/>
-    <meta property="og:image:width" content="500" />  <!-- Recommended width -->
-    <meta property="og:image:height" content="145" />  <!-- Recommended height -->
-    <link rel="preload" href="/api/static/logo" as="image">
+
     <title>Moto-Budżet</title>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="/api/static/favicon">
+    <link rel="apple-touch-icon" type="image/x-icon" href="/api/static/favicon"/>
+    <meta name="description" content="Darmowe ogłoszenia motoryzacyjne samochody, motocykle, części, akcesoria motobudzet.pl"/>
+
+    <meta name="keywords" content="moto, motobudzet, moto-budzet, motobudzet, samochod, samochody, auta, motocykle, części, czesci, osobowe samochody używane, nowe samochody, auta z komisu, sprzedaż aut, kupno pojazdów, ogłoszenia motoryzacyjne, pojazdy dostawcze, motocykle używane, części samochodowe, akcesoria motoryzacyjne, auto giełda, komis samochodowy, samochody z gwarancją, auta miejskie, SUVy, kabriolety, sportowe samochody, serwisowanie aut, tuning samochodowy, felgi, opony, kredytowanie aut, leasing pojazdów, ubezpieczenia komunikacyjne, testy pojazdów, opinie o samochodach, porady motoryzacyjne, forum motoryzacyjne, car detailing, pojazdy elektryczne, hybrydy, auta klasy premium, import aut, eksport pojazdów, targi motoryzacyjne, pokazy samochodowe, wynajem długoterminowy, car sharing, wynajem aut, warsztaty samochodowe, stacje diagnostyczne, kontrole pojazdów, myjnie samochodowe, transport pojazdów, holowanie, pomoc drogowa, aplikacja motobudzet, recenzje aut, video recenzje samochodów, blog motoryzacyjny, aktualności z rynku motoryzacyjnego, motoryzacja premium, samochody zabytkowe, klasyki motoryzacji, tuning, części OEM, części aftermarket, auto akcesoria, car audio, nawigacja samochodowa, auto alarmy, monitoring pojazdów, flota firmowa, sprzedaż flotowa, auto komisy, dealerzy samochodowi, autoryzowane serwisy, mechanika pojazdowa, blacharstwo i lakiernictwo, skup aut, wynajem samochodów sportowych, leasing operacyjny, finansowanie aut, auto dla firmy, pojazdy specjalistyczne, maszyny rolnicze, pojazdy budowlane, quady, skutery, camper vans, przyczepy, lawety, tuning off-road, rajdy samochodowe, sporty motorowe, auto garaże, parkingi, motocykle chopper, cruiser, sportbike, enduro, cross, trial, kaski motocyklowe, odzież motocyklowa, części do motocykli, akcesoria motocyklowe, sprowadzanie aut, import aut zza granicy, ekskluzywne auta, samochody luksusowe, auta z USA, auta z Japonii, samochody europejskie, auta azjatyckie, samochody amerykańskie, pojazdy hybrydowe, auta na gaz, LPG, CNG, samochody dla rodzin, vany, minivany, przeglądy techniczne, samochody na sprzedaż, oferta samochodów, pojazdy cargo, pickupy, pojazdy komercyjne, auto szyby, wycieraczki, światła samochodowe, diagnostyka komputerowa, auto detailing, polerowanie lakieru, konserwacja auta, wymiana oleju, filtry samochodowe, hamulce, układ wydechowy, zawieszenie samochodowe, układ kierowniczy, przegląd samochodu, naprawa auta, samochody na abonament, abonament motoryzacyjny, car subscription, samochody subskrypcyjne, wynajem krótkoterminowy, wynajem samochodów luksusowych, auto wynajem okazjonalny, auto zastępcze, samochody po wypadku, samochody powindykacyjne, auta z licytacji, samochody z aukcji, pojazdy komisowe, auto zastępcze z OC, likwidacja szkód komunikacyjnych, pomoc w doborze auta, auto konsulting, oceny stanu technicznego, kalkulator opłat motoryzacyjnych, badanie spalin, normy emisji, eco driving, ekologiczne auta, auta miejskie, samochody dla studentów, auto dla nowicjusza, pierwszy samochód, auto dla seniora, samochody dla niepełnosprawnych, adaptacje pojazdów, mobilność miejska, auto dla kobiety, samochody rodzinne, auta z przyczepą, holowanie przyczep, transport przyczep, samochody campingowe, pojazdy do wynajęcia, car rental, wynajem długoterminowy pojazdów, flota leasingowa, auto leasing, kredyt na samochód, ubezpieczenie samochodu, OC/AC samochodu, przegląd pojazdu, serwisowanie auta, naprawa samochodu, części samochodowe, diagnostyka pojazdów, myjnia samochodowa, car wash, tuning auta, chiptuning, mapowanie ECU, akcesoria tuningowe, części tuningowe, felgi aluminiowe, opony letnie, opony zimowe, opony całoroczne, opony terenowe, warsztat samochodowy, mechanik samochodowy, elektryk samochodowy, lakiernik samochodowy, blacharz samochodowy, detailing samochodowy, car care, pielęgnacja auta, konserwacja pojazdu, przegląd techniczny, badanie techniczne, serwis klimatyzacji, wymiana płynów eksploatacyjnych, wymiana oleju, wymiana filtrów, wymiana klocków hamulcowych, wymiana tarcz hamulcowych, wymiana rozrządu, naprawa silnika, naprawa skrzyni biegów, naprawa zawieszenia, wymiana opon, serwis opon, przechowalnia opon, geometria kół, wyważanie kół, naprawa alufelg, sprzedaż alufelg, regeneracja felg, polerowanie felg, malowanie felg, prostowanie felg, wymiana szyb samochodowych, naprawa szyb samochodowych, przyciemnianie szyb, oklejanie aut, zmiana koloru auta, zmiana wyglądu auta, car wrapping, oklejanie samochodów, zmiana koloru samochodu, foliowanie auta, car foil, tuning optyczny, zmiana wydechu, zmiana zawieszenia, zmiana wnętrza auta, zmiana tapicerki, zmiana siedzeń, zmiana kierownicy, zmiana pedałów, zmiana dźwigni zmiany biegów, zmiana gałki zmiany biegów, zmiana gałki hamulca ręcznego, zmiana panelu deski rozdzielczej, zmiana oświetlenia wnętrza, zmiana oświetlenia zewnętrznego, zmiana lamp, zmiana żarówek, LEDy w samochodzie, xenony w samochodzie, halogeny w samochodzie, światła do jazdy dziennej, światła przeciwmgielne, światła stop, kierunkowskazy, światła awaryjne, światła cofania, światła postojowe, światła pozycyjne, światła drogowe, światła mijania, światła długie, światła krótkie, światła pełne, światła LED, lampy LED, lampy xenonowe, lampy halogenowe, żarówki do samochodu, żarówki LED, żarówki xenonowe, żarówki halogenowe, systemy oświetleniowe do samochodu, oświetlenie wnętrza auta, oświetlenie zewnętrzne auta, tuning świetlny, zmiana barwy świateł, zmiana natężenia światła, systemy audio do samochodu, car audio, radio samochodowe, głośniki samochodowe, subwoofery samochodowe, wzmacniacze samochodowe, odtwarzacze DVD, systemy nawigacyjne, GPS w samochodzie, lokalizatory GPS, systemy monitoringu, kamery cofania, czujniki parkowania, systemy parkowania, asystent parkowania, tempomat, asystent jazdy, systemy bezpieczeństwa, systemy wspomagania kierowcy, ESP, ABS, ASR, systemy stabilizacji toru jazdy, systemy hamowania awaryjnego, systemy ostrzegania o zmianie pasa ruchu, systemy utrzymania pasa ruchu, systemy rozpoznawania znaków drogowych, systemy kontroli martwego pola, systemy kontroli trakcji, systemy kontroli prędkości, systemy samoczynnego hamowania, systemy ostrzegania o kolizji, systemy ostrzegania o wypadku"/>
+
+<!--//TODO handle this twitter/x meta data ;)-->
+<!--    <meta name="twitter:card" content="summary_large_image" />-->
+<!--    <meta name="twitter:site" content="@digitalocean" />-->
+<!--    <meta name="twitter:title" content="Sammy the Shark" />-->
+<!--    <meta name="twitter:description" content="Senior Selachimorpha at DigitalOcean" />-->
+<!--    <meta name="twitter:image" content="https://html.sammy-codes.com/images/large-profile.jpg" /-->
+
+
+    <meta http-equiv="Content-Language" content="pl"/>
+    <meta property="og:title" content="Motobudzet - darmowe ogłoszenia motoryzacyjne, nowe, używane samochody, motocykle, części"/>
+    <meta property="og:description" content="Motobudzet - darmowe ogłoszenia motoryzacyjne"/>
+    <meta property="og:url" content="www.motobudzet.pl"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="motobudzet.pl"/>
+    <meta property="fb:app_id" content="736642330008245" />
+    <meta property="og:image" content="https://motobudzet.pl/api/static/logo/facebookLogo"/>
+    <meta property="og:image:width" content="700" />
+    <meta property="og:image:height" content="203" />
+
+
+
+    <link rel="preload" href="/api/static/logo" as="image">
     <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/snowflake.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/searchForm.css}" />
