--- a/module-main/motobudzetapi/src/main/resources/templates/login.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/login.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <title>Moto-Budżet</title>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="/api/static/favicon">
+  <link rel="apple-touch-icon" type="image/x-icon" href="/api/static/favicon"/>
+  <meta name="description" content="Darmowe ogłoszenia motoryzacyjne samochody, motocykle, części, akcesoria motobudzet.pl"/>
+
   <link rel="preload" href="/api/static/logo" as="image">
   <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
   <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
