--- a/module-main/motobudzetapi/src/main/resources/templates/editForm.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/editForm.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>Moto-Budżet</title>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="/api/static/favicon">
+  <link rel="apple-touch-icon" type="image/x-icon" href="/api/static/favicon"/>
+  <meta name="description" content="Darmowe ogłoszenia motoryzacyjne samochody, motocykle, części, akcesoria motobudzet.pl"/>
+>
   <link rel="preload" href="/api/static/logo" as="image">
   <link rel="stylesheet" type="text/css" th:href="@{/css/navBarMainContainerLogoAdvertisement.css}" />
   <link rel="stylesheet" type="text/css" th:href="@{/css/createForm.css}" />
