some refactoring with optimization

--- a/module-main/motobudzetapi/src/main/resources/templates/index.html
+++ b/module-main/motobudzetapi/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Moto-Budżet</title>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="/api/static/favicon">
+    <link rel="icon" type="icon" href="/api/static/favicon">
     <link rel="apple-touch-icon" type="image/x-icon" href="/api/static/favicon"/>
     <meta name="description" content="Darmowe ogłoszenia motoryzacyjne samochody, motocykle, części, akcesoria motobudzet.pl"/>
 
