--- a/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
+++ b/motobudzetapi/src/main/resources/static/css/myAccountPanel.css
@@ -3,7 +3,7 @@
     max-width: 100%;
     box-sizing: border-box;
     flex-basis: auto;
-    height: auto;
+    /*height: auto;*/
     /*background-color: #181818;*/
     /*background-color: #000000;*/
     background-color: rgba(0, 0, 0, 0.9);
