--- a/motobudzetapi/src/main/resources/templates/advertisement.html
+++ b/motobudzetapi/src/main/resources/templates/advertisement.html
@@ -32,7 +32,9 @@
     <script th:if="${ROLE == 'ROLE_ADMIN'}" type="text/javascript" th:src="@{/js/management_header.js}"></script>
     <script type="text/javascript" th:src="@{/js/advertisement.js}" ></script>
     <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
-    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
+<!--    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>-->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 </head>
 <body>
 <header>
