--- a/motobudzetapi/src/main/resources/templates/createForm.html
+++ b/motobudzetapi/src/main/resources/templates/createForm.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/zoom.css}" />
   <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
   <script type="text/javascript" th:src="@{/js/createForm.js}" ></script>
-  <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
+  <!--    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>-->
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 
 <body>
