--- a/motobudzetapi/src/main/resources/templates/editForm.html
+++ b/motobudzetapi/src/main/resources/templates/editForm.html
@@ -16,7 +16,8 @@
 
   <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
   <script type="text/javascript" th:src="@{/js/editForm.js}" ></script>
-  <script type="text/javascript" th:src="@{/js/quill.js}" ></script>
+  <!--    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>-->
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
 
 <body>
