--- a/motobudzetapi/src/main/resources/templates/editForm.html
+++ b/motobudzetapi/src/main/resources/templates/editForm.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/snowflake.css}" />
   <link rel="stylesheet" type="text/css" th:href="@{/css/quill.snow.css}" />
   <link rel="stylesheet" type="text/css" th:href="@{/css/zoom.css}" />
-
   <script type="text/javascript" th:src="@{/js/utils.js}" ></script>
   <script type="text/javascript" th:src="@{/js/editForm.js}" ></script>
+  <script type="text/javascript" th:src="@{/js/advertisement_form_utils.js}" ></script>
   <!--    <script type="text/javascript" th:src="@{/js/quill.js}" ></script>-->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 </head>
